--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,6 +8,10 @@ framework:
     #esi: true
     #fragments: true
 
+    serializer:
+        default_context:
+            allow_extra_attributes: true
+
 when@test:
     framework:
         test: true
