Added a Basic Script Controller.

--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,4 @@ APP_SECRET=c93c56c73f25bde01336c5a512659b82
 ###< symfony/framework-bundle ###
 
 DATABASE_URL="mysql://root:psalm69@127.0.0.1:3306/macwatch?serverVersion=mariadb-11.5.2"
+MACWATCH_SERVER_FETCH_SCRIPT_SECURE_TOKEN="mook"
