--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    exclusion_list: '%env(default::json:EXCLUSION_LIST)%'
 
 services:
     # default configuration for services in *this* file
@@ -28,3 +29,8 @@ services:
     App\Validator\FlexibleDateTimeConstraintValidator:
         tags:
             - { name: 'validator.constraint_validator' }
+
+
+    App\Service\ActivityService:
+        arguments:
+            $exclusionList: '%exclusion_list%'
